fixed text wrapping in collpaisble subsection

--- a/src/app/components/Blocks/collapsible-subsection/collapsible-subsection.component.scss
+++ b/src/app/components/Blocks/collapsible-subsection/collapsible-subsection.component.scss
@@ -72,6 +72,7 @@
       display: flex;
       flex-direction: column;
       transition: transform 0.15s ease-in-out;
+      overflow-wrap: anywhere;
 
       &.hidden {
         transform: scaleY(0);
